Tools/OPA Gatekeeper/example-constraint.yml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: dm-approved-repo
spec:
  enforcementAction: warn # [dryrun | warn | deny]
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "dm"
  parameters:
    repos: # Note - policy uses "startsWith" to match items
      - r.local.labs/
      - registry.k8s.io/kube-controller-manager:v1
      - registry.k8s.io/kube-apiserver
